apps/pingvin/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingvin
  labels:
    app: pingvin
  namespace: halo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pingvin
  template:
    metadata:
      labels:
        app: pingvin
    spec:
      containers:
      - name: pingvin
        image: stonith404/pingvin-share
        ports:
        - containerPort: 3000  # SMB port
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "260Mi"
            cpu: "200m"
        volumeMounts:
        - name: pingvin-data-claim
          mountPath: /data
      volumes:
      - name: pingvin-data-claim
        persistentVolumeClaim:
          claimName: pingvin-data
