apps/pingvin/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingvin
  namespace: halo
spec:
  ingressClassName: nginx # Specify the Traefik ingress class explicitly
  rules:
    - host: pingvin.halo.fabseit.net # Match the host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingvin # Backend service name
                port:
                  number: 3000 # Backend service port
  tls:
    - hosts:
        - pingvin.halo.fabseit.net # TLS will apply to this host
      secretName: local-fabseit-net-prod-tls # Reference to the TLS secret
